--- a/SimpleQuiz/appsettings.json
+++ b/SimpleQuiz/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=SimpleQuiz;User ID=farzin;Password=Aa123456;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
