--- a/SimpleQuiz/SimpleQuiz.csproj
+++ b/SimpleQuiz/SimpleQuiz.csproj
@@ -29,6 +29,11 @@
     <Folder Include="Controllers\All\" />
     <Folder Include="Controllers\Managers\" />
     <Folder Include="Controllers\Users\" />
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PublicLibrary\PublicLibrary.csproj" />
   </ItemGroup>
 
 </Project>
